dl tutorial on EC

--- a/SDAE_DL_Tutorial_on_Lucas_et_al.ipynb
+++ b/SDAE_DL_Tutorial_on_Lucas_et_al.ipynb
@@ -37,7 +37,7 @@
    },
    "outputs": [],
    "source": [
-    "! pip install rasterio livelossplot"
+    "! pip install rasterio livelossplot torchviz"
    ]
   },
   {
@@ -48,7 +48,7 @@
     }
    },
    "source": [
-    "And import them all:"
+    "And import all we need:"
    ]
   },
   {
